# cmangos-communicator

communicatord/: CMakeLists.txt  CommunicatorDefines.h  communicatord.conf.dist.in  communicatord.rc  main.cpp
communicatord/Database/: DatabaseManager.cpp  DatabaseManager.h
communicatord/Json/: JsonReader.cpp  JsonReader.h  NostCoreJson.cpp  NostCoreJson.h
communicatord/Network/: CoreSender.cpp  CoreSender.h  JsonSocket.cpp  JsonSocket.h
socket-reference/: ImportSocket.cpp  ImportSocket.h  ImportStructures.cpp  ImportStructures.h  PlayerImport.cpp  WorldImport.cpp
